# icub_crawling_v2

./: README.md
app/context/crawling/: config_cpg.ini
modules/cpg/: CMakeLists.txt  CrawlerModule.cpp  CrawlerModule.h  CrawlerThread.cpp  CrawlerThread.h  cpg.cpp  cpg.h  main.cpp  test_cpg.cpp
